log_output/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: logoutput
  name: logoutput
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  strategy: {}
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes:
        - name: log-output-pingpong-share
          persistentVolumeClaim:
            claimName: share-claim
      containers:
        - image: log_output/producer:1.11
          imagePullPolicy: IfNotPresent
          name: log-output-producer
          volumeMounts:
            - name: log-output-pingpong-share
              mountPath: /tmp
          resources: {}
        - image: log_output/consumer:1.11
          imagePullPolicy: IfNotPresent
          name: log-output-consumer
          volumeMounts:
            - name: log-output-pingpong-share
              mountPath: /tmp
          resources: {}
status: {}
