log_output/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-service
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
    - port: 1231
      protocol: TCP
      targetPort: 3000
