log_output/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logoutput-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: logoutput-service
            port:
              number: 1231
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-service
            port: 
              number: 1234
